Add and edit some files
- Add go-yaml and crypto/bcrypt to dependencies
- Add Link database handler
- Add Auth API handler
- Move utility functions to util package
- Update gitignores
- Update API spec
